src/objects/FSTR__RPA_Object__c.object
<CustomObject>
    <description>Object to track processes, robots, and queues that are cached from RPA providers</description>
    <fields>
        <fullName>FSTR__Label__c</fullName>
        <description>Label of RPA Object</description>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Provider__c</fullName>
        <description>provider of RPA Option</description>
        <label>Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UiPath</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Type__c</fullName>
        <description>type of RPA Option</description>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Value__c</fullName>
        <description>value for RPA Option</description>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>RPA Object</label>
    <nameField>
        <label>RPA Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RPA Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>